--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,7 @@
-- name: Checkout configs
-    uses: actions/checkout@v3
+- uses: actions/checkout@v3
     with:
-      repository: ScenarioHunting/ScenarioHunting
-#       path: .
+      repository: 'ScenarioHunting/ScenarioHunting'
+    #       path: .
       ref: master
-#       token: ${{ secrets.RELEASE_TOKEN }} 
+    #       token: ${{ secrets.RELEASE_TOKEN }} 
 
