--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,10 +6,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
-        uses: actions/checkout@3
+        uses: actions/checkout@v3
         with:
-        repository: # optional, default is ${{ github.repository }}
-        # The branch, tag or SHA to checkout. When checking out the repository that triggered a workflow, this defaults to the reference or SHA for that event.  Otherwise, uses the default branch.
+        repository: 'ScenarioHunting/sh-stage'
 
-        ref: # optional
-        # Personal access token (PAT) used to fetch the repository. The PAT is configured with the local git config, which enables your scripts to run authenticated git commands. The post-job step removes the PAT.
