--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,12 +1,12 @@
 name: learn-github-actions
 run-name: ${{ github.actor }} is learning GitHub Actions
 # on: [push]
+on: push
 jobs:
-  check-bats-version:
+  build:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
         with:
-        repository: 'ScenarioHunting/sh-stage'
+          repository: 'ScenarioHunting/sh-stage'
 
