--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,6 @@
-name: learn-github-actions
-run-name: ${{ github.actor }} is learning GitHub Actions
-# on: [push]
-on: push
+name: clone-the-stage
+run-name: ${{ github.actor }} is cloning the stage
+on: delete
 jobs:
   build:
     runs-on: ubuntu-latest
