--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,4 +9,5 @@ jobs:
         with:
           repository: 'ScenarioHunting/sh-stage'
           ref: 'main'
+          token: ${{ secrets.GH_PAT }} 
 
