--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,4 @@ jobs:
       - uses: actions/checkout@v3
         with:
           repository: 'ScenarioHunting/sh-stage'
-          ref: 'main'
-          token: ${{ secrets.GH_PAT }} 
-
+          ref: 'master'
